[tool.poetry]
name = "bt-qmt-store"
version = "0.1.0"
description = ""
authors = ["pluto <mayuanchi1029@gmail.com>"]
readme = "README.md"
packages = [{include = "bt_qmt_store"}]

[tool.poetry.dependencies]
python = "3.8.10"
backtrader = "^1.9.78.123"
pandas = "^2.0.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
pdoc3 = "^0.10.0"
notebook = "^6.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
