[tool.poetry]
name = "qmtbt"
version = "0.1.1"
description = ""
authors = ["pluto <mayuanchi1029@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
backtrader = "^1.9.78.123"
pandas = "^2.0.2"
schedule = "^1.2.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
pdoc3 = "^0.10.0"
notebook = "^6.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
