[tool.poetry]
name = "qmtbt"
version = "0.2.0"
description = ""
authors = ["pluto <mayuanchi1029@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
backtrader = "^1.9.78.123"
pandas = "^2.0.2"
schedule = "^1.2.0"
xtquant = "^240613.1.1"
matplotlib = "^3.9.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
pdoc3 = "^0.10.0"
notebook = "^6.5.4"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]

branch = "main"
upload_to_PyPI = true
upload_to_release = true
commit_author = "github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test"
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
